weewx change history
--------------------

2.3.X XX/XX/13

A bad record archive type now causes a catch up to be abandoned, rather
than program termination.

Fixed bug in CWOP upload that put spaces in the upload string if the pressure
was under 1000 millibars.

Added illuminance-to-radiation conversion for FineOffsetUSB driver.

Added pressure calibration option to wee_config_fousb

Fixed windchill calculation in FineOffsetUSB driver.

Fixed bug in trends, when showing changes in temperature. NB: this fix will
not work with explicit unit conversion. I.e., $trend.outTemp.degree_C will
not work.

Fixed FineOffsetUSB driver to handle cases where the 'delay' is undefined,
resulting in a TypeError that caused weewx to stop.

Modified wee_config_vantage and wee_config_fousb so that the configuration
file will be guessed if none is specified.

Fixed wxformulas.heatindexC to handle arguments of None type.

rsync now allows a port to be specified.

Fixed day/night transition bug.

Added gradients to the day/night transitions.

The names of the drivers have changed to make them more consistent.
	old                       new
	VantagePro.py (Vantage)   vantage.py (Vantage)
	WMR918.py (WMR-918)       wmr9x8.py (WMR9x8)
	wmrx.py (WMR-USB)         wmr100.py (WMR100)
	
	new drivers:
	wmr200.py (WMR200)
	ws28xx.py (WS28xx)

2.2.1 02/15/13

Added a function call to the Vantage driver that allows the lamp to be
turned on and off. Added a corresponding option to wee_config_vantage.

Fixed bug where an undefined wind direction caused an exception when using
ordinal wind directions.

2.2.0 02/14/13

Weewx can now be installed using Debian (DEB) or Redhat (RPM) packages, as well
as with the old 'setup.py' method. Because they install things in different
places, you should stick with one method or another. Don't mix and match.
Thanks to Matthew Wall for putting this together!

Added plot options line_gap_fraction and bar_gap_fraction, which control how